<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/search_menu_title"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />
    <item
        android:id="@+id/add_comment"
        android:icon="@drawable/baseline_add_comment_24"
        android:title="@string/add_comment_title"
        app:showAsAction="collapseActionView|ifRoom" />
    <item
        android:id="@+id/others"
        android:title="@string/others"
        android:icon="@drawable/baseline_more_vert_24"
        app:showAsAction="collapseActionView|ifRoom"
        >
        <menu>
            <item
                android:id="@+id/enable_raw_query"
                android:title="@string/enable_raw_query"
                android:icon="@drawable/baseline_code_24"
                android:checkable="true"
                />
            <item
                android:id="@+id/logout"
                android:title="@string/log_out"
                android:icon="@drawable/baseline_logout_24"
                />
        </menu>
    </item>
</menu>